--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: Spider Jar
+name: Spider Jar Gen CI
 
 on: workflow_dispatch
 
@@ -17,7 +17,7 @@ jobs:
         cache: gradle
         
     - name: Build with Gradle
-      run: ./gradlew.bat ec
+      run: ./build.bat ec
         
     - name: Update spider jar
       uses: EndBug/add-and-commit@v7
